# energystaff

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.dev.yml  nginx-dev.conf
server/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 1a77bf5dba0e_add_ondelete_property.py  2069eb021568_add_pk_and_fk_indexes.py  22d7b0560dea_add_resume_table.py  26c2cd34b2c2_add_company_address_and_inn.py  2af7b033bec6_increase_description_fields_on_models.py  3a5039296f33_add_tools_tables.py  50eb3d8320e8_update_roles_tables_associations.py  53b408c4bf44_add_negotiations_table.py  5d43403feb84_add_negotiatiation_employer_id.py  72068a6a492e_add_roles_tables.py  72fd85e86f7b_add_applicant_edu_book_number_field.py  7be62b307542_add_vacancy_author_id.py  89a4513965e7_fix_vacancy_salary_orm_type.py  8cba4e189d19_add_vacancies.py  bf101a5385a3_append_users_fields.py  c40fc4c96a6c_add_recommendations_table.py  eed5dd417b7d_add_companies_table.py  f6352a966bbe_add_vacancy_location_and_work_hours_.py  f8defb651643_add_first_user_table.py  fd76eb581b85_add_negotiation_description.py
server/src/: config.py  database.py  deps.py  exceptions.py  main.py  responses.py  schemas.py  storage.py
server/src/auth/: config.py  manager.py  roles.py  router.py  schemas.py  tools.py
server/src/companies/: models.py  router.py  schemas.py
server/src/dao/: common.py  vacancies.py
server/src/negotiations/: models.py  router.py  schemas.py
server/src/recommendations/: models.py  router.py  schemas.py
server/src/resume/: models.py  (+2 more)
server/tests/: conftest.py  test_entities_users.py  test_roles.py
(+120 files in other folders)
