[tool.poetry]
name = "energystaff server"
version = "0.1.0"
description = ""
authors = ["forkenn <103817264+Forkenn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.39"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
alembic = "^1.15.1"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
