[tool.poetry]
name = "energystaff server"
version = "0.1.0"
description = ""
authors = ["forkenn <103817264+Forkenn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.39"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
alembic = "^1.15.1"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.0"
pytest = "^8.3.5"
aiosqlite = "^0.21.0"
pytest-asyncio = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
